--- a/www/project.html
+++ b/www/project.html
@@ -50,7 +50,7 @@
 
 
     <!-- BASE MODULE -->
-    <!-- <script src="js/modules/modules.js" charset="utf-8"></script> -->
+    <script src="js/modules/modules.js" charset="utf-8"></script>
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-8"></script>
