--- a/www/memberslot.html
+++ b/www/memberslot.html
@@ -9,8 +9,57 @@
     <link rel="stylesheet" href="css/selectmember.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/master.css">
 
+    <!--  ANGULAR -->
+    <script src="js/angular.min.js" charset="utf-10"></script>
+
+  <!-- MODULES -->
+
+    <!-- API -->
+    <script src="js/modules/api/services/services.js" charset="utf-10"></script>
+    <script src="js/modules/api/services/ApiService.js" charset="utf-10"></script>
+    <script src="js/modules/api/api.js" charset="utf-10"></script>
+
+    <!-- USER -->
+    <script src="js/modules/users/services/services.js" charset="utf-10"></script>
+    <script src="js/modules/users/services/UserService.js" charset="utf-10"></script>
+    <script src="js/modules/users/users.js" charset="utf-10"></script>
+
+    <!-- PROFILES -->
+    <script src="js/modules/profiles/services/services.js" charset="utf-10"></script>
+    <script src="js/modules/profiles/services/ProfileService.js" charset="utf-10"></script>
+    <script src="js/modules/profiles/profiles.js" charset="utf-10"></script>
+
+    <!-- SLOTS -->
+    <script src="js/modules/slots/services/services.js" charset="utf-10"></script>
+    <script src="js/modules/slots/services/SlotService.js" charset="utf-10"></script>
+    <script src="js/modules/slots/slots.js" charset="utf-10"></script>
+
+    <!-- PROJECTS -->
+    <script src="js/modules/projects/services/services.js" charset="utf-10"></script>
+    <script src="js/modules/projects/projects.js" charset="utf-10"></script>
+
+    <!-- MISSIONS -->
+    <script src="js/modules/missions/services/services.js" charset="utf-10"></script>
+    <script src="js/modules/missions/services/MissionService.js" charset="utf-10"></script>
+    <script src="js/modules/missions/missions.js" charset="utf-10"></script>
+
+    <!-- QUESTS -->
+    <script src="js/modules/quests/services/services.js" charset="utf-10"></script>
+    <script src="js/modules/quests/services/QuestService.js" charset="utf-10"></script>
+    <script src="js/modules/quests/quests.js" charset="utf-10"></script>
+
+
+    <!-- BASE MODULE -->
+    <script src="js/modules/modules.js" charset="utf-10"></script>
+
+  <!-- CONTROLLERS -->
+    <script src="js/controllers/controllers.js" charset="utf-10"></script>
+
+    <!-- APP -->
+    <script src="js/app.js" charset="utf-10"></script>
+
   </head>
-  <body>
+  <body ng-app="fellowship" ng-controller="AppController" ng-init="redirectIfNotLoggedIn()">
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -21,7 +70,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Fellowship</a>
+          <a class="navbar-brand" href="home.html">Fellowship</a>
         </div>
 
         <div class="collapse navbar-collapse" id="collapse-1">
