--- a/www/project.html
+++ b/www/project.html
@@ -71,7 +71,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Fellowship</a>
+          <a class="navbar-brand" href="home.html">Fellowship</a>
         </div>
 
         <div class="collapse navbar-collapse" id="collapse-1">
