--- a/www/project.html
+++ b/www/project.html
@@ -125,7 +125,11 @@
           <!-- Mission 1 -->
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
             <button class="btn btn-primary col-lg-12 col-md-12 col-sm-12 col-xs-12" data-toggle="collapse" href="#collapseMissionOne" aria-expanded="true" aria-controls="collapseMissionOne">
-              <span class="glyphicon glyphicon-chevron-right"></span> Mission #1 - Plan a meeting to plan the next meeting
+              <span class="col-lg-7 col-md-7 col-sm-7 col-xs-7 text-left" style="margin-top: 20px"><span class="glyphicon glyphicon-chevron-right"></span> Mission #1 - Plan a meeting to plan the next meeting</span>
+              <div class="progress" style="margin-top: 20px">
+                <div class="progress-bar progress-bar-success" style="width: 80%"></div>
+                <div class="progress-bar progress-bar-warning" style="width: 20%"></div>
+              </div>
             </button>
             <div class="mission-info col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <h6>DESCRIPTION</h6>
