--- a/www/memberslot.html
+++ b/www/memberslot.html
@@ -75,12 +75,12 @@
 
         <div class="collapse navbar-collapse" id="collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-            <li><a href="#"><i class="fa fa-users"></i> Members</a></li>
-            <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
+            <li><a href="home.html"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="members.html"><i class="fa fa-users"></i> Members</a></li>
+            <li><a href="profile.html"><i class="fa fa-user"></i> Profile</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
+            <li><a ng-click="logout()" href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
           </ul>
         </div>
       </div>
