--- a/www/home.html
+++ b/www/home.html
@@ -93,59 +93,13 @@
           <button type="button" name="button" class="btn btn-default btn-lg pull-right"><span class="new-h3"><a href="#"><i class="fa fa-plus-square "></i> Create new project</a><span></button>
         </div>
       </div>
+
       <div class="row">
         <div class="col-lg-12">
-          <span class="new-h1">My Quests</span>
+          <span class="new-h1">My Projects</span>
         </div>
       </div>
       <div class="row box">
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-quest">
-              <h4>Quest Title</h4>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
-              <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
-              <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-quest">
-
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-quest">
-
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-quest">
-
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-quest">
-
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-12">
-          <span class="new-h2"><button class="btn btn-default btn-lg" data-toggle="collapse" data-target="#coll2">My Projects <i class="fa fa-caret-down pull-right"></i></button></span>
-        </div>
-      </div>
-      <div class="row box collapse" id="coll2">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <a href="#">
             <div class="thumbnail">
@@ -190,10 +144,36 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <span class="new-h2"><button class="btn btn-default btn-lg" data-toggle="collapse" data-target="#coll3">Open Projects <i class="fa fa-caret-down pull-right"></i></button></span>
+          <span class="new-h1">My Quests</span>
         </div>
       </div>
-      <div class="row box collapse" id="coll3">
+      <div class="row box">
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <a href="#">
+            <div class="thumbnail thumb-quest">
+              <h4>Quest Title</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
+              <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
+              <h6 class="card-subtitle text-muted">SKILL +10xp</h6>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <a href="#">
+            <div class="thumbnail thumb-quest">
+
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12">
+          <span class="new-h1">Open Projects</span>
+        </div>
+      </div>
+      <div class="row box">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <a href="#">
             <div class="thumbnail">
@@ -202,27 +182,6 @@
               <br><br>
               <p><span class="glyphicon glyphicon-calendar"></span> Start Date: mm/dd/yyyy</p>
               <p><span class="glyphicon glyphicon-calendar"></span> Due Date: mm/dd/yyyy</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-
             </div>
           </a>
         </div>
