home navbar links added, members.html and profile.html using their Controllers

--- a/www/profile.html
+++ b/www/profile.html
@@ -54,6 +54,7 @@
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-8"></script>
+    <script src="js/controllers/profiles/ProfileController.js" charset="utf-8"></script>
 
     <!-- APP -->
     <script src="js/app.js" charset="utf-8"></script>
@@ -86,7 +87,7 @@
       </div>
     </nav>
 
-    <div class="container" ng-controller="ProfileController" ng-init="getProfile()">
+    <div class="container" ng-controller="ProfileController">
 
       <div class="row" id="center">
         <div class="col-lg-10 col-md-10 col-sm-10">
