--- a/www/members.html
+++ b/www/members.html
@@ -54,6 +54,7 @@
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-10"></script>
+    <script src="js/controllers/profiles/ProfileController.js" charset="utf-8"></script>
 
     <!-- APP -->
     <script src="js/app.js" charset="utf-10"></script>
@@ -86,7 +87,7 @@
       </div>
     </nav>
 
-    <div class="container" ng-controller="ProfileController" ng-init="listUsers()">
+    <div class="container" ng-controller="ProfileController">
       <div class="row">
         <div class="col-lg-12">
           <h1>MEMBERS LIST</h1>
