--- a/www/profile.html
+++ b/www/profile.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2">
-          <button type="button" name="button" class="btn btn-default btn-md pull-right"><span class="new-h3"><a href="editprofile.html"><i class="fa fa-pencil"></i> Edit profile</a><span></button>
+          <button type="button" id="button-strong" name="button" class="btn btn-default btn-md pull-right"><span class="new-h3"><a href="editprofile.html"><i class="fa fa-pencil"></i> Edit profile</a><span></button>
         </div>
       </div>
 
