--- a/www/home.html
+++ b/www/home.html
@@ -90,7 +90,7 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <button type="button" name="button" class="btn btn-default btn-lg pull-right"><span class="new-h3"><a href="#"><i class="fa fa-plus-square "></i> Create new project</a><span></button>
+          <button type="button" id="button-strong" name="button" class="btn btn-default btn-lg pull-right"><span class="new-h3"><a href="#"><i class="fa fa-plus-square "></i> Create new project</a><span></button>
         </div>
       </div>
 
