--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/master.css">
 
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
@@ -65,13 +66,13 @@
         <div class="col-lg-12">
           <div id="main">
             <h1>Welcome to Fellowship</h1>
-            <p>Bacon ipsum dolor amet meatball pork pork loin, landjaeger rump spare ribs corned beef brisket beef ribs salami venison t-bone. Ground round jerky salami brisket meatball prosciutto, leberkas capicola beef shankle tenderloin alcatra biltong shank chuck. Alcatra tongue flank meatball ground round bacon chuck t-bone landjaeger doner andouille beef biltong swine turkey. Ribeye corned beef alcatra ball tip kielbasa filet mignon tenderloin. Ball tip shoulder ribeye, short ribs chicken ground round short loin jerky prosciutto spare ribs. Bresaola boudin swine biltong, pork loin doner prosciutto pastrami ground round.</p>
+            <p>Teamwork management platform. Your skills and crew fully functional.</p>
             <hr>
             <a type="button" class="btn btn-default btn-lg" href="login.html">
-              <i class="fa fa-user"> Sign In</i>
+              Login
             </a>
             <a type="button" class="btn btn-default btn-lg" href="signup.html">
-              <i class="fa fa-user-plus"> Sign Up</i>
+              Register
             </a>
           </div>
         </div>
