--- a/www/profile.html
+++ b/www/profile.html
@@ -116,7 +116,7 @@
       <div class="row box">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <a href="#">
-            <div class="thumbnail">
+            <div class="thumbnail thumb-proj">
               <h4>Project Title</h4>
               <p>Quests in progress: 5</p>
               <p>Quests available: 4</p>
@@ -128,28 +128,28 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <a href="#">
-            <div class="thumbnail">
+            <div class="thumbnail thumb-proj">
 
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <a href="#">
-            <div class="thumbnail">
+            <div class="thumbnail thumb-proj">
 
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <a href="#">
-            <div class="thumbnail">
+            <div class="thumbnail thumb-proj">
 
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <a href="#">
-            <div class="thumbnail">
+            <div class="thumbnail thumb-proj">
 
             </div>
           </a>
@@ -162,13 +162,29 @@
         </div>
       </div>
       <div class="row box">
-        <div class="col-lg-12">
-          <div class="thumbnail">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xm-12">
+          <div class="thumbnail thumb-skill">
+            <h4><strong>Skill Title</strong></h4>
+            <div class="row">
+              <div class="col-lg-10 col-md-10 col-sm-9 col-xs-9">
+                <div class="progress">
+                  <div class="progress-bar progress-bar-success" style="width: 70%"></div>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3">
+                <p>Level XX</p>
+              </div>
+            </div>
+            <p>Next level</p>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xm-12">
+          <div class="thumbnail thumb-skill">
 
           </div>
         </div>
-        <div class="col-lg-12">
-          <div class="thumbnail">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xm-12">
+          <div class="thumbnail thumb-skill">
 
           </div>
         </div>
