--- a/www/index.html
+++ b/www/index.html
@@ -69,10 +69,10 @@
             <h3>Teamwork management plataform. Your skills and crew fully functional.</h3>
             <hr>
             <a type="button" id="button-strong" class="btn btn-default btn-lg" href="login.html">
-              Sign In
+              Login
             </a>
             <a type="button" id="button-strong" class="btn btn-default btn-lg" href="signup.html">
-              Sign Up
+              Register
             </a>
           </div>
         </div>
