--- a/www/login.html
+++ b/www/login.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/login.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
 
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
@@ -83,14 +84,14 @@
               <input type="password" class="form-control" id="password" placeholder="Password">
             </div>
             <div class="form-group">
-              <button type="submit" class="btn btn-default btn-lg" ng-click="authenticate()">Sign In</button>
+              <button type="submit" id="button-strong" class="btn btn-default btn-lg" ng-click="authenticate()">Sign In</button>
             </div>
           </form>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="box2">
           <div id="box3">
-            <p>Not a member yet?<br>
-              <a href="signup.html">Join us</a></p>
+            <h3>Not a member yet?<br>
+              <a href="signup.html">Join us</a></h3>
           </div>
         </div>
       </div>
