Login page title

--- a/www/login.html
+++ b/www/login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sign In</title>
+    <title>Login</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/login.css" media="screen" title="no title" charset="utf-8">
@@ -84,7 +84,7 @@
               <input type="password" class="form-control" id="password" placeholder="Password">
             </div>
             <div class="form-group">
-              <button type="submit" id="button-strong" class="btn btn-default btn-lg" ng-click="authenticate()">Sign In</button>
+              <button type="submit" id="button-strong" class="btn btn-default btn-lg" ng-click="authenticate()">Login</button>
             </div>
           </form>
         </div>
