--- a/www/signup.html
+++ b/www/signup.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/signup.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
 
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
@@ -91,14 +92,14 @@
               <input type="password" class="form-control" id="conf-password" placeholder="Confirm Password">
             </div>
             <div class="form-group">
-              <button type="submit" class="btn btn-default btn-lg" ng-click="register()">Sign Up</button>
+              <button type="submit" id="button-strong" class="btn btn-default btn-lg" ng-click="register()">Register</button>
             </div>
           </form>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="box2">
           <div id="box3">
-            <p>Already a member?<br>
-              <a href="login.html">Login</a></p>
+            <h3>Already a member?<br>
+              <a href="login.html">Login</a></h3>
           </div>
         </div>
       </div>
