--- a/www/project.html
+++ b/www/project.html
@@ -50,7 +50,7 @@
 
 
     <!-- BASE MODULE -->
-    <script src="js/modules/modules.js" charset="utf-8"></script>
+    <!-- <script src="js/modules/modules.js" charset="utf-8"></script> -->
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-8"></script>
@@ -117,10 +117,8 @@
 
           <!-- New Mission -->
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <button class="btn btn-primary pull-right" data-toggle="collapse" href="#collapseMissionOne" aria-expanded="true" aria-controls="newMission">
-              <span class="glyphicon glyphicon-chevron-right"></span> Add New Mission
-            </button>
-          </div>
+            <button class="btn btn-primary pull-right">Add New Mission</button>
+          </div> <br><br>
 
           <!-- Mission 1 -->
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
