--- a/www/login.html
+++ b/www/login.html
@@ -64,7 +64,7 @@
     <div class="container" ng-controller="UserController">
       <div class="row">
         <div class="col-lg-12">
-          <h1>Let's get started!</h1>
+          <h1>All aboard!</h1>
         </div>
       </div>
       <div class="row">
