--- a/www/profile.html
+++ b/www/profile.html
@@ -114,6 +114,8 @@
         </div>
       </div>
       <div class="row box">
+        <fellow-project ng-repeat='projectid in user.projectIds' ng-controller='ProjectService'>
+        </fellow-project>
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <a href="#">
             <div class="thumbnail thumb-proj">
