--- a/www/profile.html
+++ b/www/profile.html
@@ -36,6 +36,7 @@
 
     <!-- PROJECTS -->
     <script src="js/modules/projects/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/projects/services/ProjectService.js" charset="utf-8"></script>
     <script src="js/modules/projects/projects.js" charset="utf-8"></script>
 
     <!-- MISSIONS -->
@@ -55,14 +56,20 @@
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-8"></script>
     <script src="js/controllers/profiles/ProfileController.js" charset="utf-8"></script>
+    <script src="js/controllers/projects/ProjectController.js" charset="utf-8"></script>
+
+
+  <!-- DIRECTIVES -->
+  <script src="js/directives/directives.js" charset="utf-8"></script>
+
 
     <!-- APP -->
     <script src="js/app.js" charset="utf-8"></script>
-
+    <script src="js/main.js"></script>
   </head>
   <body ng-app="fellowship" ng-controller="AppController" ng-init="redirectIfNotLoggedIn()">
 
-    <nav class="navbar navbar-default" ng-controller="ProfileController">
+    <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-1" aria-expanded="false">
@@ -87,7 +94,7 @@
       </div>
     </nav>
 
-    <div class="container">
+    <div class="container" ng-controller="ProfileController">
 
       <div class="row" id="center">
         <div class="col-lg-10 col-md-10 col-sm-10">
@@ -96,10 +103,10 @@
             </div>
             <div class="col-lg-10 col-md-10 col-sm-9">
               <div class="col-lg-12 col-md-12 col-sm-12">
-                <span class="new-h1">FName LName</span>&nbsp;&nbsp;<a href="#"><span id="pencil"><i class="fa fa-pencil fa-2x"></span></i></a><span class="new-h3">&nbsp;&nbsp;@username</span>
+                <span class="new-h1">{{user.name}}</span>&nbsp;&nbsp;<a href="#"><span id="pencil"><i class="fa fa-pencil fa-2x"></span></i></a><span class="new-h3">&nbsp;&nbsp;@{{user.username}}</span>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12">
-                <span class="new-h3">Ocupation</span>
+                <span class="new-h3">{{user.occupation}}</span>
               </div>
             </div>
         </div>
@@ -114,52 +121,26 @@
         </div>
       </div>
       <div class="row box">
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-proj">
-              <h4>Project Title</h4>
-              <p>Quests in progress: 5</p>
-              <p>Quests available: 4</p>
-              <br>
-              <p><span class="glyphicon glyphicon-calendar"></span> Start Date: mm/dd/yyyy</p>
-              <p><span class="glyphicon glyphicon-calendar"></span> Due Date: mm/dd/yyyy</p>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-proj">
-
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-proj">
-
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-          <a href="#">
-            <div class="thumbnail thumb-proj">
-        <div class="row">
+        <div class="row"  ng-repeat='projectid in user.projectIds' ng-controller='ProjectController'>
           <a href="project.html">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
               <div class="thumbnail thumb-skill proj-card">
-                <h4 class="padd-left"><strong>Project Title</strong></h4>
+                <h4 class="padd-left"><strong>{{project.title}}</strong></h4>
                 <div class="row proj-cont">
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                    <h4 class="padd-left"><span class="glyphicon glyphicon-user"></span> 8 members</h4>
+                    <h4 class="padd-left"><span class="glyphicon glyphicon-user"></span> {{project.slots.length}} members</h4>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-                    <h4><span class="glyphicon glyphicon-user"></span> (Open)</h4>
+                    <h4><span class="glyphicon glyphicon-user"></span> ({{project.status}})</h4>
                   </div>
                 </div>
               </div>
             </div>
           </a>
         </div>
+
+        <!-- <fellow-project ng-repeat='projectid in user.projectIds' ng-controller='ProjectController'>
+        </fellow-project> -->
 
       </div>
 
@@ -191,6 +172,7 @@
             </div>
           </div>
         </div>
+    </div>
     </div>
 
     <script src="js/jquery-2.2.0.min.js"></script>
